--- a/Movie script doc2vec.ipynb
+++ b/Movie script doc2vec.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,18 +12,20 @@
     "import os\n",
     "from os.path import join\n",
     "import re\n",
-    "from typing import Dict, List"
+    "from typing import Dict, List\n",
+    "\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Change DATA_DIR per your local filepath\n",
     "\n",
-    "DATA_DIR = '/home/mandar/Mandar/Trope Analysis/'"
+    "DATA_DIR = '/home/mandar/Data/NCSU/TropeAnalysis/TropesDataset'"
    ]
   },
   {
@@ -120,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,13 +205,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "genre = 'Action'\n",
-    "movie_genre_json_list = get_genre_movie_list(genre)\n",
-    "\n",
+    "genre_movie_json_list = get_genre_movie_list(genre)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(290,\n",
+       " ['avatar.json',\n",
+       "  'dune.json',\n",
+       "  'blade.json',\n",
+       "  'machete.json',\n",
+       "  'startrekfirstcontact.json'])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(genre_movie_json_list), genre_movie_json_list[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_script_trope_match_df = pd.read_csv(join(DATA_DIR, 'action_movie_script_trope_match.csv'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Movie_Script</th>\n",
+       "      <th>Movie_trope</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>ninjaassassin</td>\n",
+       "      <td>NinjaAssassin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>landofthedead</td>\n",
+       "      <td>LandOfTheDead</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>meninblack3</td>\n",
+       "      <td>MenInBlack3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>perfectcreature</td>\n",
+       "      <td>PerfectCreature</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>ghostandthedarknessthe</td>\n",
+       "      <td>TheGhostAndTheDarkness</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0            Movie_Script             Movie_trope\n",
+       "0           0           ninjaassassin           NinjaAssassin\n",
+       "1           1           landofthedead           LandOfTheDead\n",
+       "2           2             meninblack3             MenInBlack3\n",
+       "3           3         perfectcreature         PerfectCreature\n",
+       "4           4  ghostandthedarknessthe  TheGhostAndTheDarkness"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_script_trope_match_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movie_list = [movie.split('.json')[0] for movie in genre_movie_json_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "263"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_with_tropes = movie_script_trope_match_df.Movie_Script.isin(movie_list)\n",
+    "len(movies_with_tropes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "movie_filename = 'fantasticfour.json'\n",
     "movie_json_data = load_json_movie_dialog_file(genre, movie_filename)"
    ]
@@ -2189,7 +2346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
